# ShakeChecker

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  README.md  ShakeChecker.spec  build.ps1  calibration.toml  cspell.json  pyproject.toml
.github/workflows/: release.yml
data/: locations_index.json  species_core.json
docs/: index.html
fixtures/: expected.json
scripts/: dex_here.py  dex_image_check.py  make_icon.py
src/: app.py  battle_log.py  battle_logic.py  battle_panel.py  battle_reader.py  catch_calc.py  dex_panel.py  dex_session.py  dex_tracker.py  game_time.py  hp_settler.py  location_reader.py  name_reader.py  ocr_engine.py  overlay.py  paths.py  settings_panel.py  settings_store.py  sprite_loader.py  status_settler.py  turn_tracker.py  ui_components.py  ui_icons.py  ui_overlay.py  ui_theme.py  window_capture.py
src/data/: balls.json
tests/: test_battle_logic.py  test_battle_reader.py  test_catch_calc.py  test_caught_icon.py  test_dex_panel.py  test_dex_panel_widget.py  test_dex_session.py  test_dex_tracker.py  test_hp_settler.py  test_hud_time.py  test_location_reader.py  test_name_reader.py  test_overlay.py  test_status_settler.py  test_turn_tracker.py
