[project]
name = "shakechecker"
# Keep in sync with paths.APP_VERSION (the runtime/display version).
version = "1.1.1"
description = "Passive screen-reading catch-rate overlay for PokeMMO (read-only, capture + display)"
requires-python = ">=3.11"
dependencies = [
    "mss",
    "numpy",
    "opencv-python",
    "pydantic",
    "PyQt6",
    "pywin32; sys_platform == 'win32'",
    # Pinned: the bundled OCR model (PP-OCRv3) is what all OCR calibration,
    # thresholds and fixture expectations are tuned against. A newer rapidocr ships
    # a different model that reads borderline frames differently (CI read the
    # live_turn9 chat as nothing), so an unpinned upgrade would silently shift OCR.
    "rapidocr-onnxruntime==1.2.3",
    "rapidfuzz",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
build = ["pyinstaller", "pillow"]  # package into a Windows .exe (see ShakeChecker.spec)

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
# Several deps ship no type stubs (mss, pywin32, rapidocr, rapidfuzz); don't fail
# on their missing imports. Our own code is still checked, and the few unavoidable
# opencv/PyQt6 stub gaps carry targeted `# type: ignore[code]` with a reason.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
